--- a/shared/styles/main.css
+++ b/shared/styles/main.css
@@ -903,17 +903,48 @@ ul.header__pages__navbar li:hover {
   margin-bottom: 0;
 }
 
+.slider-about__wrapper {
+  width: 80%;
+}
+
+.slider-about {
+  position: relative;
+  display: flex;
+  margin: 0 2px;
+}
+.slider-about__img {
+  width: 100%;
+  height: auto;
+  border-radius: 20px 20px 0 0;
+}
+.slider-about__progress-bar {
+  position: absolute;
+  height: 6px;
+  width: 100%;
+  bottom: -3px;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #e0e0e0;
+  overflow: hidden;
+}
+.slider-about__progress-bar__fill {
+  height: 100%;
+  background-color: #000;
+  transition: width 0.016s linear;
+}
+
 .slider-about-embla {
+  width: 100%;
   overflow: hidden;
 }
 
-.slider-award__img {
-  flex: 0 0 100%;
-  min-width: 0;
+.embla__container {
+  display: flex;
 }
 
-.embla-container {
-  display: flex;
+.embla__slide {
+  flex: 0 0 100%;
+  min-width: 0;
 }
 
 /*# sourceMappingURL=main.css.map */
