--- a/shared/styles/_variables.scss
+++ b/shared/styles/_variables.scss
@@ -9,8 +9,8 @@
   --color-dardaker-gray: #2D2D27;
   --color-dark-gray: #4D4D4D;
   --color-medium-gray: #B7B7B7;
-  --color-light-gray: #B8B8B8;
   --color-lighter-gray: #D9D9D9;
+  --color-light-gray: #e7e7e7;
 
   --color-main-orange: #E95522;
 
