feat: added a button leading to the page with trainers, slightly changed the color palette

--- a/shared/styles/_variables.scss
+++ b/shared/styles/_variables.scss
@@ -8,9 +8,9 @@
 
   --color-dardaker-gray: #2D2D27;
   --color-dark-gray: #4D4D4D;
-  --color-medium-gray: #B7B7B7;
-  --color-lighter-gray: #D9D9D9;
-  --color-light-gray: #e7e7e7;
+  --color-medium-gray: #D9D9D9;
+  --color-lighter-gray: #e1e1e1;
+  --color-light-gray: #eeeeee;
 
   --color-main-orange: #E95522;
 
