--- a/shared/styles/components/_footer.scss
+++ b/shared/styles/components/_footer.scss
@@ -1,7 +1,7 @@
 @use '../helpers/index' as *;
 
 .footer {
-  background: var(--color-lighter-gray);
+  background: var(--color-medium-gray);
   padding: 20px;
 
   &__content {
