--- a/shared/styles/components/_header.scss
+++ b/shared/styles/components/_header.scss
@@ -5,9 +5,13 @@
   justify-content: space-between;
   align-items: center;
   padding: rem(25) 0;
+  z-index: 20;
 
   &__wrapper {
-    background: var(--color-lighter-gray);
+    background: var(--color-medium-gray);
+    z-index: 10;
+    position: sticky;
+    top: 0;
   }
 
   &__logo {
