--- a/shared/styles/components/_top-coaches.scss
+++ b/shared/styles/components/_top-coaches.scss
@@ -2,6 +2,7 @@
 
 .top-coaches {
   background-color: var(--color-light-gray);
+  margin-bottom: 50px;
 
   &__content {
 
@@ -10,11 +11,25 @@
       justify-content: center;
       margin: 30px;
     }
+
+    &__button {
+      display: flex;
+      justify-content: center;
+      font-size: 25px;
+      background: var(--color-lighter-gray);
+      padding: 10px 25px;
+      margin-bottom: 30px;
+      border-radius: 30px;
+
+      &:hover {
+        background: var(--color-medium-gray);
+      }
+    }
   }
 }
 
 .about-coaches {
   display: flex;
   justify-content: space-between;
-  margin-bottom: 30px;
+  margin-bottom: 40px;
 }
